[package]
name = "rustdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apricity = "0.1.0"
bincode = "1.3.3"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
ttf-noto-sans = "0.1.1"
